After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 794421 - unaligned access causes websockets test to fail on sparc
unaligned access causes websockets test to fail on sparc
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: Misc
2.58.x
Other Linux
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
https://bugs.gentoo.org/630516
Depends on:
Blocks:
 
 
Reported: 2018-03-17 10:28 UTC by Rolf Eike Beer
Modified: 2018-03-19 09:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch to fix the issue (501 bytes, patch)
2018-03-17 10:28 UTC, Rolf Eike Beer
committed Details | Review

Description Rolf Eike Beer 2018-03-17 10:28:36 UTC
Created attachment 369809 [details] [review]
patch to fix the issue

Error happens also with 2.56.0 and 2.56.1. Output from gdb:

# random seed: R02S694bbc9f5f0220360e30b12c387ea468
1..25
# Start of websocket tests
# Start of soup tests
[New Thread 0xf6ef7b70 (LWP 62080)]
[New Thread 0xf66f7b70 (LWP 62083)]
# libsoup-DEBUG: stopping input source
# libsoup-DEBUG: closing io stream
# libsoup-DEBUG: stopping input source
# libsoup-DEBUG: closing io stream
[Thread 0xf6ef7b70 (LWP 62080) exited]
ok 1 /websocket/soup/handshake
[New Thread 0xf6ef7b70 (LWP 62084)]
# libsoup-DEBUG: closed: completed io stream close
# libsoup-DEBUG: closed: completed io stream close

Thread 1 "websocket-test" received signal SIGBUS, Bus error.
0xf7f70200 in send_message (self=0x709238, flags=SOUP_WEBSOCKET_QUEUE_NORMAL, 
    opcode=<optimized out>, data=0x18c88 "this is a test", 
    length=<optimized out>)
    at /var/tmp/portage/net-libs/libsoup-2.58.2/work/libsoup-2.58.2/libsoup/
soup-websocket-connection.c:400
400                     * ((guint32 *)mask) = g_random_int ();
(gdb) bt
  • #0 send_message
    at /var/tmp/portage/net-libs/libsoup-2.58.2/work/libsoup-2.58.2/libsoup/ soup-websocket-connection.c line 400
  • #1 test_send_client_to_server
    at /var/tmp/portage/net-libs/libsoup-2.58.2/work/libsoup-2.58.2/tests/ websocket-test.c line 326
  • #2 ??
    from /usr/lib/libglib-2.0.so.0

This is not a bug in the testcase, but in the library itself.
Comment 1 Claudio Saavedra 2018-03-17 17:57:30 UTC
Review of attachment 369809 [details] [review]:

Thanks, this looks good. Please push or let me know if you need me to do it for you.
Comment 2 Rolf Eike Beer 2018-03-17 19:10:37 UTC
Please commit.
Comment 3 Claudio Saavedra 2018-03-19 09:07:37 UTC
Fixed a couple of formatting issues and added a commit message. Thanks!