WebSockets: Avoid unaligned memory access

This is causing test failures in SPARC architectures.

https://bugzilla.gnome.org/show_bug.cgi?id=794421